--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -42,6 +42,6 @@ jobs:
           aws_key_id: ${{ secrets.AWS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_bucket: cucumber-bank-reports
-          source_dir: ${{ github.workspace }}/target/
+          source_dir: /home/runner/work/cucumber-bank/cucumber-bank/target/cucumber-report.html
       - name: Link to report
         run: echo "https://cucumber-bank-reports.s3.us-east-1.amazonaws.com/${{steps.s3.outputs.object_key}}/index.html"
