adding push report to s3 bucket v8

--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -14,8 +14,8 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ ubuntu-latest]
-        version: [17]
+        os: [ubuntu-latest]
+        version: [17, 21]
     name: 'Build Maven Java'
     steps:
       - uses: actions/checkout@v4
