--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -17,6 +17,7 @@ jobs:
         os: [ubuntu-latest]
         version: [17, 21]
     name: 'Build Maven Java'
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v3
