--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -64,5 +64,6 @@ jobs:
           aws-region: us-east-1
           aws-access-key-id: ${{ secrets.AWS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: copy files
         run: |
           aws s3 cp ${{ github.workspace }}/upload/index.html s3://cucumber-bank-reports/index.html
